--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
   </header>
 
-  <main style="display: flex; height: 80vh;">
+  <main style="display: flex; height: 90vh;">
     <div class="text-container" style="flex: 1; display: flex; flex-direction: column; justify-content: center; align-items: left; padding: 20px;">
       <h1 style="text-align: left;">LOREM IPSUM</h1>
       <p style="text-align: left;">
@@ -69,7 +69,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2024 Restaurant</p>
+    <p>&copy; 2024 Restaurant - by Krishnamurthy M G @ 7760698948</p>
   </footer>
 </body>
 </html>
