--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="image-container" id="rightimage"></div>
       </div>
     </div>
-    <div class="text-container">
+    <div class="text-container1">
       <div class="info-box">
         <h6>LOREM IPSUM</h6>
         <h1 style="margin-bottom: 0;">LOREM IPSUM</h1>
